--- a/README
+++ b/README
@@ -8,7 +8,8 @@ Reproduction Steps
 1. Set up a c4.large AWS EC2 instance with Ubuntu 14.04 as the OS.i
 
 2. Login to the instance and install git: 
-   sudo apt-get install git
+    sudo apt-get update
+    sudo apt-get install git
 
 3. Clone the git repository into your home directory. It is important that this project runs in a directory named "cs244-assign-3" in your home directory.
    cd ~; git clone https://github.com/ntindall/cs244-assign-3.git
